--- a/.travis.yml
+++ b/.travis.yml
@@ -25,11 +25,11 @@ android:
     # - sys-img-x86-android-17
 
 before_script: "chmod +x ./gradlew"
-script: "./gradlew assembleRelease"
+script: "./gradlew -Pandroid.useDeprecatedNdk=true assembleRelease"
 
 deploy:
   provider: script
-  script: "./gradlew -Pandroid.useDeprecatedNdk=true bintrayUpload"
+  script: "./gradlew bintrayUpload"
   on:
     tags: true
 
