--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ script: "./gradlew -Pandroid.useDeprecatedNdk=true assembleRelease"
 
 deploy:
   provider: script
-  script: "./gradlew bintrayUpload"
+  script: "./gradlew -Pandroid.useDeprecatedNdk=true bintrayUpload"
   on:
     tags: true
 
