--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
 
         manifestPlaceholders = [
                 JPUSH_PKGNAME : applicationId,
-                JPUSH_APPKEY : JPUSH_APPKEY, //JPush上注册的包名对应的appkey.
-                JPUSH_CHANNEL : "developer-default", //暂时填写默认值即可.
+                JPUSH_APPKEY : System.getenv('JPUSH_APPKEY'),   //JPush上注册的包名对应的appkey.
+                JPUSH_CHANNEL : "developer-default",            //暂时填写默认值即可.
         ]
     }
     buildTypes {
