--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
 
         manifestPlaceholders = [
                 JPUSH_PKGNAME : applicationId,
-                JPUSH_APPKEY : System.getenv('JPUSH_APPKEY'),   //JPush上注册的包名对应的appkey.
+                JPUSH_APPKEY : project.hasProperty('JPUSH_APPKEY') ? JPUSH_APPKEY : System.getenv('JPUSH_APPKEY'),   //JPush上注册的包名对应的appkey.
                 JPUSH_CHANNEL : "developer-default",            //暂时填写默认值即可.
         ]
     }
