--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ android:
     # - sys-img-x86-android-17
 
 before_script: "chmod +x ./gradlew"
-script: "./gradlew -Pandroid.useDeprecatedNdk=true assembleRelease"
+script: "./gradlew -Pandroid.useDeprecatedNdk=true :library:assembleRelease"
 
 deploy:
   provider: script
